app/assets/stylesheets/_pages.css.scss
// PAGES
// Styles for all public pages
// ---------------------------


// Landing page
// ------------

#landing{
  h1, h3, p, .icon{
    color:$black;
  }
  .hero-unit{
    margin:15px 0 30px 0;
    padding:0;
    background-color:$bodyBackground;
    border:0;
    border-bottom:5px solid $grayLighter;
    #value-prop{
      padding-bottom:50px;
      h1{
        margin:20px 0 30px 0;
        font-size:55px;
        line-height:55px;
      }
    }
    #screenshot{
      min-height:407px;
      min-width:459px;
      background: url('screenshots/landing.png') no-repeat bottom right;
      display:block;
    }
    #screenshot-phone{
      height:310px;
      background: url('screenshots/landing.png') no-repeat bottom center;
      background-size:contain;
      display:block;
    }
    .btn-primary{
      margin-top:40px;
    }
  }
  #benefits{
    padding:40px 0 40px 0;
    text-align:center;
    h3{
      font-size:18px;
      margin-bottom:5px;
    }
    .icon{
      margin-bottom:35px;
      font-size:55px;
    }
  }
}

// New landing page
// ----------------

#new-landing{
  h1{
    color:black;
  }
  a:focus{
    outline:0;
  }
  .hero-unit{
    background:none;
    padding:0;
    margin:0;
    border:0;
    h1{
      margin-bottom:60px;
      font-size:48px;
      line-height:55px;
      text-align:center;
      // tablet
      @media (min-width:768px) and (max-width: 979px) {
        font-size:40px;
        line-height:45px;
        margin-bottom:52px;
      }
      // phone
      @media (max-width:767px) {
        font-size:30px;
        line-height:35px;
        margin-bottom:50px;
      }
    }
    .the-hero{
      text-align:center;
      img{
        width:inherit;
        // desktop
        @media (min-width:980px){
          width:980px;
          height:1400px;
          margin-bottom:275px;
        }
        // tablet
        @media (min-width:768px) and (max-width: 979px){
          margin-bottom:273px;
        }
      }
    }
  }
  #grey-background{
    background-color:$grayLighter;
    width:100%;
    height:135px;
    // desktop
    @media (min-width:980px){
      position:absolute;
      left:0;
      top:1800px;
    }
    // tablet
    @media (min-width:768px) and (max-width: 979px){
      position:absolute;
      left:0;
      top:1770px;
    }
    // phone
    @media (max-width:767px) {
      height:auto;
      margin:70px -30px 70px;
      padding-left:30px;
      padding-right:20px;
    }
    #cta-testimonials{
      #cta{
        padding:40px 0 40px 0;
        h1{
          font-size:24px;
          display:inline-block;
        }
        .btn{
          margin-right:0;
          white-space:nowrap;
        }
      }
      #testimonials{
        padding-bottom:50px;
        p{
          font-family:Times New Roman;
          font-size:16px;
          line-height:20px;
        }
        span.by{
          // margin-top:20px;
          font-size:16px;
          font-family:Helvetica;
          float:right;
        }
      }
      // desktop
      @media (min-width:980px){
        #cta{
          text-align:center;
          .btn{
            margin-left:40px;
          }
        }
      }
      // tablet
      @media (min-width:768px) and (max-width: 979px){
        #cta{
          text-align:center;
          h1{
            font-size:19px;
          }
          .btn{
            margin-left:18px;
          }
        }
        #testimonials{
          p{
            font-size:15px;
          }
          span.by{
            font-size:15px;
          }
        }
      }
      // phone
      @media (max-width:767px) {
        #cta{
          padding-top:33px;
          h1{
            margin-top:0;
            font-size:19px;
            line-height:28px;
            display:block;
          }
          .btn{
            margin-top:15px;
          }
        }
        #testimonials{
          span.by{
            float:left;
          }
        }
      }
    }
  }
  #screenshots{
    padding:0;
    text-align:center;
    img{
      margin:0 10px 20px 10px;
      border:10px solid white;
    }
  }
  .alert{
    margin: 50px 10px 0 10px;
  }
}

// Style tile
// ----------

#style-tile, #admin #conversion-dashboard{
  .well{
    padding:10px;
    border:0;
    @include box-shadow(0 1px 2px 1px #ddd);
    display:inline-block;
    .background-light{
      background-color:$bodyBackground;
    }
    .background-dark{
      background-color:$grayLight;
    }
    .white{
      background-color:$white;
    }
    .grayDark{
      background-color:$grayDark;
    }
    .red{
      background-color:$red;
    }
    .blue{
      background-color:$blue;
    }
  }
}
#style-tile{
  .well{
    width:150px;
    height:150px;
    margin:13px 25px 10px 0;
    div{
      width:inherit;
      height:inherit;
    }
  }
}


// Admin dashboard
// ---------------

#admin{
  #conversion-dashboard{
    .well{
      margin-bottom:25px;
      .hero-unit{
        padding:60px 5% 28px 20%;
        margin:0;
        border:0;
        &.grayDark div, &.grayDark h1{
          color:$white;
        }
        &.grayDark div{
          font-weight:100;
        }
      }
    }
    .conversion{
      margin-top:100px;
      text-align:center;
      color:$blue;
      &.total{
        color:$grayDark;
      }
    }
  }
  .tabbable{
    margin-top:50px;
  }
  td.actions{
    a{
      margin-right: 10px;
      &:hover{
        text-decoration:none;
      }
    }
  }
  .modal{
    padding:40px 30px;
  }
}

